tests/single_instruction_translation_validation/mcsema/register-variants-samereg/pmullw_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:210:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %20)
            ^
0.02user 0.02system 0:00.18elapsed 28%CPU (0avgtext+0avgdata 27416maxresident)k
0inputs+16outputs (0major+3285minor)pagefaults 0swaps
